<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="product"
            type="com.example.auctionapp.domain.models.MyBidModel" />
        <variable
            name="listener"
            type="com.example.auctionapp.ui.my_applications.adapter.BidAdapterDelegate.OnItemClickListener" />

        <variable
            name="listenerFavorite"
            type="com.example.auctionapp.ui.my_applications.adapter.BidAdapterDelegate.OnItemClickListener" />
    </data>

    <LinearLayout
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:onClick="@{(view) -> listener.onItemClick(product)}"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        android:focusable="true">

        <View
            android:id="@+id/divider"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:clickable="true"
            android:onClick="@{(view) -> listener.onItemClick(product)}"
            android:elevation="30dp"
            android:focusable="true"
            app:cardCornerRadius="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:src="@drawable/car"
                android:scaleType="centerCrop"
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:onClick="@{(view) -> listener.onItemClick(product)}"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.card.MaterialCardView>



        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/registerTimeStart"
                        android:textColor="@color/black"
                        android:text="Регистрация: 20.12.2023-20.12.2023"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="8dp"
                        android:id="@+id/registerTimeEnd"
                        android:textColor="@color/black"
                        android:text="Регистрация: 20.12.2023-20.12.2023"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
<!--                <CheckBox-->
<!--                    android:id="@+id/like"-->
<!--                    android:layout_width="25dp"-->
<!--                    android:onClick="@{(view) -> listenerFavorite.onFavoriteClick(product)}"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:layout_height="22dp"-->
<!--                    android:background="@drawable/selector_like"-->
<!--                    android:button="@null"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

            </LinearLayout>

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/title"
                android:textColor="@color/black"
                android:text="title"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date"
                android:text="@string/status" />

            <TextView
                android:textColor="#111B33"
                android:textColorHighlight="#111B33"
                android:textColorHint="#111B33"
                android:textColorLink="#111B33"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:text="price"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:text="@string/auction_start_text" />

            <TextView
                android:visibility="gone"
                android:id="@+id/end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date"
                android:text="@string/end_date_text" />


        </LinearLayout>


    </LinearLayout>
</layout>